# my-jarvis

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.kiro/specs/project-audit-and-cleanup/: .config.kiro  requirements.md
assets/sounds/voices/jarvis-clean/: actor_master.txt
config/: config.yaml  skills.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  SETUP.md  SKILLS.md
scripts/: _build_master_ref.py  _transcribe_master.py  check_env.sh  setup.sh
src/jarvis/: __init__.py  __main__.py  config.py  main.py
src/jarvis/audio/: reactions.py  recorder.py  vad.py  wake_word.py
src/jarvis/brain/: base.py  openai_llm.py  prompts.py
src/jarvis/core/: assistant.py  logger.py  state.py
src/jarvis/skills/: _macos.py  apps.py  base.py  browser.py  clipboard.py  files.py  info.py  music.py  notes.py  registry.py  system.py  vision.py
src/jarvis/stt/: base.py  whisper_stt.py
src/jarvis/tts/: _text_utils.py  base.py  elevenlabs_tts.py  f5_tts.py  say_tts.py
tests/: test_smoke.py
